app/assets/stylesheets/navigation.scss
// Main Application Navigation
@mixin nav-menu-font {
  text-align: center;
  text-transform: uppercase;
  font-size: 0.9em;
  font-weight: 500;
  letter-spacing: 1px;
}

// Nav-bar
.doodles-nav {
  position: fixed;
  top: 0;
  left: 0;
  height: 100px;
  width: 100%;
  z-index: 1;

  display: flex;
  align-items: center;
  justify-content: center;

  @include primary-font;
  background-color: transparent;
  @include ease;

  #no-hero + &,
  &.is-scrolled {
    background-color: $primary-blue;
    height: 65px;

    .brand {
      transform: scale(0.8);
    }
  }

  .nav-menu {
    list-style-type: none;
    list-style: none;

    li {
      display: inline-block;
      @include nav-menu-font;
      padding: 0 60px;

      a, a:visited {
        color: white;
        text-decoration: none;

        &:after {
          content: '';
          display: block;
          background-color: white;
          opacity: 0;
          margin-top: 2px;
          height: 2px;
          width: 100%;
          transition: opacity 250ms ease;
        }
      }

      &.current a:after,
      &:hover a:after {
        opacity: 1;
      }

      &:hover {
        cursor: pointer;
      }
    }
    #nav-donate-btn {
      background-color: $primary-blue;
      padding: 5px 20px 3px 20px;
      border-radius: 5px;
      margin-left: 40px;
      margin-right: 50px;

      a:after {
        opacity: 0;
      }

      &:hover {
        background-color: darken($primary-blue, 15%);
      }
    }

    #nav-logo a:after {
      opacity: 0;
    }
  }

  .dropdown {
    position: relative;
    display: inline-block;

    &:hover {
      padding-top: 12px;
      background-color: lighten($primary-blue, 15%);
    }
  }

  .dropdown-content {
      @include nav-menu-font;
      color: white;
      display: none;
      position: absolute;
      left: 0;
      background-color: lighten($primary-blue, 25%);
      min-width: 192px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      padding: 12px 16px;
      z-index: 1;
  }

  .dropdown:hover .dropdown-content {
      display: block;
  }
}

